--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -2,21 +2,229 @@
 
 body {
     @extend %my-container;
+    background-color: #f3ededdc;
 
     .index-header {
         @include goFlex(row, space-between);
         align-items: center;
         padding-top: 70px;
         width: 50%;
+        margin-bottom: 100px;
 
         ul {
             width: 80%;
-            @include roboto(700);
+            @include roboto(500);
             @include goFlex(row, space-between);
 
             a {
                 color: black;
             }
+        }
+    }
+
+    .index-section-1 {
+        margin-bottom: 50px;
+
+        h1 {
+            font-size: $primaryHeaderFontSize;
+            @include roboto(700);
+            margin-bottom: 40px;
+        }
+
+        .index-section-1-images {
+            width: 100%;
+            @include goFlex(row, space-between);
+
+            div {
+                width: 30%;
+                height: 350px;
+                background-color: white;
+            }
+
+            .index-section-1-images-div1 {
+                background-image: url(../images/1.svg);
+                background-repeat: no-repeat;
+                padding: 20px;
+
+                h3 {
+                    font-size: $primaryImageFontSize;
+                    @include roboto(500, white);
+                    padding-top: 40px;
+                }
+
+                .index-section-1-images-div1-p1 {
+                    font-size: $primaryFontSize;
+                    padding-top: 165px;
+                    @include roboto(400, #878a87, 15px);
+                }
+
+                .index-section-1-images-div1-p2 {
+                    font-size: $primaryFontSize;
+                    @include roboto(400, #878a87, 15px);
+                    display: inline;
+                }
+
+                i {
+                    color: #878a87;
+                    margin-right: 5px;
+                }
+            }
+
+            .index-section-1-images-div2 {
+                background-image: url(../images/2.svg);
+                background-repeat: no-repeat;
+                padding: 20px;
+
+                h3 {
+                    font-size: $primaryImageFontSize;
+                    @include roboto(500, white);
+                    padding-top: 40px;
+                }
+
+                .index-section-1-images-div1-p1 {
+                    font-size: $primaryFontSize;
+                    padding-top: 165px;
+                    @include roboto(400, #878a87, 15px);
+                }
+
+                .index-section-1-images-div1-p2 {
+                    font-size: $primaryFontSize;
+                    @include roboto(400, #878a87, 15px);
+                    display: inline;
+                }
+
+                i {
+                    color: #878a87;
+                    margin-right: 5px;
+                }
+            }
+
+            .index-section-1-images-div3 {
+                background-image: url(../images/3.svg);
+                background-repeat: no-repeat;
+                padding: 20px;
+
+                h3 {
+                    font-size: $primaryImageFontSize;
+                    @include roboto(500, white);
+                    padding-top: 40px;
+                }
+
+                .index-section-1-images-div1-p1 {
+                    font-size: $primaryFontSize;
+                    padding-top: 165px;
+                    @include roboto(400, #878a87, 15px);
+                }
+
+                .index-section-1-images-div1-p2 {
+                    font-size: $primaryFontSize;
+                    @include roboto(400, #878a87, 15px);
+                    display: inline;
+                }
+
+                i {
+                    color: #878a87;
+                    margin-right: 5px;
+                }
+            }
+
+
+        }
+    }
+
+    .index-section-2 {
+
+        h1 {
+            font-size: $primaryHeaderFontSize;
+            @include roboto(700);
+            margin-bottom: 40px;
+        }
+
+        .index-section-2-images {
+            width: 100%;
+            height: 900px;
+            @include goFlex(row, space-between, wrap);
+
+            .index-section-2-images-LeftSide {
+                width: 60%;
+                // display: flex;
+                // flex-direction: column;
+                // align-content: space-between;
+
+
+                .index-section-2-images-LeftSide-div1 {
+                    @include impBgImg('../images/main-1.svg', center);
+                    width: 100%;
+                    height: 430px;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    
+                }
+
+                .index-section-2-images-LeftSide-div2 {
+                    @include impBgImg('../images/main-2.svg', center);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    width: 100%;
+                    height: 430px;
+                }
+            }
+
+            .index-section-2-images-RightSide {
+                width: 35%;
+                height: 800px;
+                @include goFlex(column, space-between);
+
+                .index-section-2-images-RightSide-div1 {
+                    @include impBgImg('../images/main-3.svg', center);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    width: 100%;
+                    height: 212px;
+                }
+
+                .index-section-2-images-RightSide-div2 {
+                    @include impBgImg('../images/main-4.svg', center);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    width: 100%;
+                    height: 212px;
+                }
+
+                .index-section-2-images-RightSide-div3 {
+                    @include impBgImg('../images/main-5.svg', center);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    width: 100%;
+                    height: 212px;
+                }
+
+
+            }
+        
+        }
+    }
+
+    footer {
+        background-color: #243043;
+        padding: 50px;
+        width: 100%;
+        height: 200px;
+        @include goFlex(row, space-between, wrap);
+
+        .footer-left-side {
+            @include roboto(600, #818687 );
+            width: 40%;
+            @include goFlex(row, space-between, wrap);
+
+            p {
+                margin-bottom: 25px;
+            }
+
+            div {
+                width: 30%;
+            }
+            
         }
     }
 }
