--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,9 @@
 $primaryFontSize: 12px;
 $primaryHeaderFontSize: 28px;
-$primaryImageFontSize: 20px
+$primaryImageFontSize: 20px;
+
+$mobile-version: 480px;
+$tablet-version: 768px;
 
 
 
